# Ehon-Sandbox

./: .gitignore  .htaccess  .user.ini  composer.json
Products/: index.html  offline_tank_gauge.html  script.js  style.css
api/: .htaccess  passenger_wsgi.py
api-v1/: .htaccess  download.php  upload.php
backend/: .htaccess  COMPARISON.md  IMPLEMENTATION_SUMMARY.md  LEVEL_ALERTS_SETUP.md  QUICK_START.md  passenger_wsgi.py  pyproject.toml  requirements.txt  start_celery.sh
backend/accounts/: apps.py  models.py  tasks.py
backend/accounts/migrations/: 0002_add_tx_indexes.py  0003_userscope.py  0004_authevent.py  0005_exportjob.py
backend/backend_project/: __init__.py  celery.py  celeryapp.py  settings.py  urls.py  wsgi.py
backend/ingest/: views_fms.py  views_gateway.py
backend/ingest/fms/: __init__.py  env.py  registration.py  transactions.py
backend/ingest/gateway/: CC_IMPLEMENTATION.md  __init__.py  cc.py  delivery.py  dips.py  env.py  ports.py  probes.py  registration.py  registration_or.py  status.py  tanks.py  transactions.py
backend/ingest/management/commands/: fms.py  fms_cmd.py  gateway.py  gateway_cmd.py
cs_fms/: celery.pid  manage.py  passenger_wsgi.py  udo systemctl start celery.service  udo systemctl status redis
vmi/: .cpanel.yml  .gitignore  .htaccess  CONTRAST_FIXED.md  CSS_UNIFIED.md  DARK_MODE_COLORS.md  DARK_MODE_COMPLETE.md  DARK_MODE_CONTRAST.md  DATATABLES_AND_INPUTS_FIXED.md  FINAL_DARK_MODE_SUMMARY.md  NESTED_FOLDERS_FIXED.md  README.md  TANK_VIEW_SYSTEM.md  THEME_IMPLEMENTATION_GUIDE.md  THEME_QUICKSTART.md  THEME_STATUS.md  (+12 more)
(+454 files in other folders)
