[project]
name            = "backend"
version         = "0.1.0"
description     = ""
readme          = "README.md"          # ← keep ONE of these

authors = [
    { name = "Javier Riveros", email = "javierr@petroindustrial.com.au" }
]

requires-python = "^3.12"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-filter (>=25.1,<26.0)",
    "reportlab (>=4.4.1,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "djangorestframework-simplejwt[token-blacklist] (>=5.5.0,<6.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-axes[django] (>=8.0.0,<9.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "xlsxwriter (>=3.2.5,<4.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)"       # ← removed trailing comma
]

[tool.poetry]
package-mode = false                  # keep this here if you don’t want Poetry to build an installable package

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.3"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
